--- a/less/grid.less
+++ b/less/grid.less
@@ -144,7 +144,9 @@ hr{
 //base grid styles
 
 h4{
-    grid-column: span 5;
+    grid-column: span 6;
+    margin-bottom: 30px;
+    line-height: 1em;
 }
 
 .row{
@@ -187,7 +189,7 @@ p{
     grid-column: span 6;
 }
 h5{
-    grid-column: span 5;
+    grid-column: span 6;
 }
 h6, h2, picture{
     grid-column: span 9;
