--- a/less/typography.less
+++ b/less/typography.less
@@ -113,8 +113,8 @@ h4{
 }
 h5{
     font-weight: 400;
-    font-size: 24px;
-    line-height: 30px;
+    font-size: 1.5em;
+    line-height: 1.1em;
     color: @text-lt-gray; 
     font-family: 'SegoeUISemiLight';
 
