--- a/styles/main.css
+++ b/styles/main.css
@@ -1195,7 +1195,7 @@ a {
     margin-right: 20px;
   }
   h5 {
-    grid-column: span 9;
+    grid-column: span 8;
     margin-right: 20px;
     font-size: 1.25em;
   }
@@ -1207,12 +1207,18 @@ a {
   section {
     padding-top: 70px;
   }
-  .row {
+  .row,
+  .row-lined {
     grid-column: span 9;
     grid-template-columns: repeat(6, 1fr);
   }
+  .row-full {
+    grid-column: span 8;
+  }
   .row-five {
+    grid-column: span 9;
     grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
   }
   .row-seven {
     grid-column: span 9;
@@ -1271,6 +1277,36 @@ a {
   }
   #section-2-4 p {
     grid-column: span 7;
+  }
+  #section-3-1 .thirds .content {
+    margin-right: 10px;
+  }
+  .mag .thirds {
+    grid-column: span 2;
+  }
+  #section-3-3 .dos {
+    grid-column-end: 4;
+  }
+  .dos p {
+    padding-right: 0;
+  }
+  #section-3-4 .thirds {
+    padding-right: 20px;
+  }
+  #section-4-2 .thirds p {
+    padding-right: 10px;
+  }
+  #section-4-2 p.large {
+    grid-column: span 8;
+  }
+  #section-4-2 .left {
+    margin-right: 0;
+  }
+  #section-4-2 .right {
+    margin-left: 0;
+  }
+  #section-4-5 .fat-thirds {
+    padding-right: 10px;
   }
   .cross-through {
     font-size: 28px;
