--- a/styles/main.css
+++ b/styles/main.css
@@ -1204,6 +1204,10 @@ a {
     margin-right: 20px;
     font-size: 1.8em;
   }
+  p.title {
+    font-size: 18px;
+    line-height: 20px;
+  }
   section {
     padding-top: 70px;
   }
@@ -1211,6 +1215,16 @@ a {
   .row-lined {
     grid-column: span 9;
     grid-template-columns: repeat(6, 1fr);
+    margin-right: 10px;
+  }
+  .row .one-half,
+  .row-lined .one-half {
+    grid-column: span 3;
+    margin-right: 10px;
+  }
+  .row .thirds,
+  .row-lined .thirds {
+    margin-right: 10px;
   }
   .row-full {
     grid-column: span 8;
@@ -1220,12 +1234,20 @@ a {
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 10px;
   }
+  .row-five .thirds {
+    margin-right: 10px;
+  }
   .row-seven {
     grid-column: span 9;
     grid-template-columns: repeat(4, 1fr);
+    margin-right: 10px;
   }
   .row-twelve {
     grid-template-columns: repeat(9, 1fr);
+    margin-right: 10px;
+  }
+  .table-row {
+    grid-column: span 9;
   }
   .overlay {
     grid-column: span 9;
@@ -1307,6 +1329,47 @@ a {
   }
   #section-4-5 .fat-thirds {
     padding-right: 10px;
+  }
+  #section-4-8 .row-seven {
+    grid-column-gap: 10px;
+  }
+  #section-4-9 .row-twelve {
+    grid-template-columns: repeat(10, 1fr);
+  }
+  #section-4-9 .row-twelve .half {
+    grid-column: span 5;
+  }
+  #section-4-9 .row-twelve .half p {
+    padding-right: 10px;
+  }
+  #section-4-9 .row-twelve .half p.half {
+    grid-column: span 1;
+  }
+  #section-5-3 .half {
+    grid-column: span 3;
+  }
+  #section-5-8 p {
+    margin-right: 20px;
+  }
+  #section-5-9 .row-twelve,
+  #section-5-11 .row-twelve,
+  #section-5-13 .row-twelve {
+    grid-template-columns: repeat(8, 1fr);
+    margin-right: 10px;
+  }
+  #section-5-9 p.title,
+  #section-5-11 p.title,
+  #section-5-13 p.title {
+    margin-bottom: 0;
+  }
+  #section-5-13 .full-row {
+    grid-column: span 9;
+  }
+  #section-5-13 .row .fourths {
+    grid-column: span 2;
+  }
+  #section-6-3 .thirds {
+    grid-column: span 3;
   }
   .cross-through {
     font-size: 28px;
