--- a/less/laptop.less
+++ b/less/laptop.less
@@ -1,21 +1,62 @@
+/*
+*
+*
+*  laptops from 768 to 1084px
+*
+*/
+
 @media all and (max-width: 1084px){
+  //typography
+  h4{
+    font-size: 2.25em;
+  }
+  h5{
+    font-size: 1.125em;
+  }
+
+  //grid
+  .row-twelve{
+    grid-template-columns: repeat(8, 1fr);
+    grid-row-gap: 10px;
+    .fourths{
+      grid-column: span 4;
+    }
+  }
+
+  .tt-row{
+    grid-template-columns: repeat(5, 1fr);
+  }
+
+  #section-2-6, #section-3-1, #section-3-2 {
+    .thirds{
+      grid-column: span 7;
+    }
+  }
+
+
+
+
+
   .overlay{
     grid-column: span 9;
+    margin-right: 10px;
+    grid-template-rows: repeat(2, min-content);
     .left, .right{
-      margin-top: 10px;
-      margin-bottom: 20px;
+      margin: -5px 0 20px;
+      width: 100%;
       padding: 15px 10px;
+      background: #000;
+      grid-row-start: 2;
+      grid-column-start: 1;
+      grid-column-end: 8;
       p{
         font-size: .5em;
         margin-bottom: 10px;
       }
     }
-    .left{
-      grid-column-start: 1;
-      margin-left: 10px;
-    }
-    .right{
-      grid-column-end: 7;
-    }
+  }
+
+  .cta{
+    grid-column: span 9;
   }
 }
