--- a/styles/main.css
+++ b/styles/main.css
@@ -1155,29 +1155,6 @@ a {
 .white {
   color: white;
 }
-@media all and (max-width: 1084px) {
-  .overlay {
-    grid-column: span 9;
-  }
-  .overlay .left,
-  .overlay .right {
-    margin-top: 10px;
-    margin-bottom: 20px;
-    padding: 15px 10px;
-  }
-  .overlay .left p,
-  .overlay .right p {
-    font-size: .5em;
-    margin-bottom: 10px;
-  }
-  .overlay .left {
-    grid-column-start: 1;
-    margin-left: 10px;
-  }
-  .overlay .right {
-    grid-column-end: 7;
-  }
-}
 /* 
 *
 *  Desktop 1084px-1400px
@@ -1187,6 +1164,9 @@ a {
 @media all and (max-width: 1400px) {
   #section-1 h1 {
     font-size: 4.5em;
+  }
+  h3 {
+    font-size: 70px;
   }
   h4 {
     font-size: 2.5em;
@@ -1376,5 +1356,58 @@ a {
   }
   .cta {
     grid-column: span 5;
+  }
+}
+/*
+*
+*
+*  laptops from 768 to 1084px
+*
+*/
+@media all and (max-width: 1084px) {
+  h4 {
+    font-size: 2.25em;
+  }
+  h5 {
+    font-size: 1.125em;
+  }
+  .row-twelve {
+    grid-template-columns: repeat(8, 1fr);
+    grid-row-gap: 10px;
+  }
+  .row-twelve .fourths {
+    grid-column: span 4;
+  }
+  .tt-row {
+    grid-template-columns: repeat(5, 1fr);
+  }
+  #section-2-6 .thirds,
+  #section-3-1 .thirds,
+  #section-3-2 .thirds {
+    grid-column: span 7;
+  }
+  .overlay {
+    grid-column: span 9;
+    margin-right: 10px;
+    grid-template-rows: repeat(2, -webkit-min-content);
+    grid-template-rows: repeat(2, min-content);
+  }
+  .overlay .left,
+  .overlay .right {
+    margin: -5px 0 20px;
+    width: 100%;
+    padding: 15px 10px;
+    background: #000;
+    grid-row-start: 2;
+    grid-column-start: 1;
+    grid-column-end: 8;
+  }
+  .overlay .left p,
+  .overlay .right p {
+    font-size: .5em;
+    margin-bottom: 10px;
+  }
+  .cta {
+    grid-column: span 9;
   }
 }
