--- a/less/typography.less
+++ b/less/typography.less
@@ -67,8 +67,8 @@ body {
 }
 
 h1 {
-    font-size: 5em;
-    line-height: 1em;
+    font-size: 80px;
+    line-height: 80px;
     font-weight: 100;
     color: @badge-gray;
     margin-bottom: 5px;
@@ -115,9 +115,10 @@ h4{
 }
 h5{
     font-weight: 400;
-    font-size: 1.5em;
-    line-height: 1.1em;
-    color: @text-lt-gray; 
+    font-size: 24px;
+    line-height: 30px;
+    margin-bottom: 30px;
+    color: @text-lt-gray;
     font-family: 'SegoeUISemiLight';
 }
 
