--- a/less/content.less
+++ b/less/content.less
@@ -288,9 +288,27 @@ img{
     h6 {
         padding-bottom: 20px;
     }
+    p {
+        padding-right: 40px;
+    }
+    .thirds {
+        .title {
+            font-family: 'SegoeUISemiLight';
+            font-weight: 300;
+            margin-bottom: 0;
+        }
+    }
 }
 //section 2-7
 //Empowering
+#section-2 {
+    &-7 {
+        hr {
+            border-top: 1px solid #e2e2e2;
+            grid-column-end: 6;
+        }
+    }
+}
 .tt-row {
     grid-column: span 10;
     display: grid;
@@ -357,7 +375,18 @@ img{
 
     }
 }
-
+#section-3-1 {
+    .thirds {
+        .title {
+            font-family: SegoeUISemiBold;
+            font-weight: 600;
+            margin-bottom: 15px;
+        }
+        .content {
+            padding-right: 30px;
+        }
+    }
+}
 #section-3-3{
     .thirds{
         
