--- a/less/typography.less
+++ b/less/typography.less
@@ -171,8 +171,10 @@ p {
     .title{
         font-size: 20px;
         line-height:28px;
-        font-family: 'SegoeUISemiLight';
-        font-weight: 300;
+        font-family: SegoeUISemiBold;
+        font-weight: 600;
+        margin-bottom: 15px;
+
         &.large{
             font-size: 22px;
             line-height: 28px;
@@ -265,6 +267,7 @@ a{
     color: @ms-blue;
 }
 .cta{
+    margin-top: 30px;
     padding: 30px 0;
     grid-column: span 3;
     grid-template-columns: fit-content(300px);
