--- a/styles/main.css
+++ b/styles/main.css
@@ -262,6 +262,18 @@ img {
 #section-2-6 h6 {
   padding-bottom: 20px;
 }
+#section-2-6 p {
+  padding-right: 40px;
+}
+#section-2-6 .thirds .title {
+  font-family: 'SegoeUISemiLight';
+  font-weight: 300;
+  margin-bottom: 0;
+}
+#section-2-7 hr {
+  border-top: 1px solid #e2e2e2;
+  grid-column-end: 6;
+}
 .tt-row {
   grid-column: span 10;
   display: grid;
@@ -318,6 +330,14 @@ img {
 .mag .thirds .desc {
   font-size: 18px;
   font-family: 'SegoeUISemiLight';
+}
+#section-3-1 .thirds .title {
+  font-family: SegoeUISemiBold;
+  font-weight: 600;
+  margin-bottom: 15px;
+}
+#section-3-1 .thirds .content {
+  padding-right: 30px;
 }
 #section-3-3 .thirds .title {
   font-size: 28px;
@@ -1099,8 +1119,9 @@ p.upper {
 .thirds .title {
   font-size: 20px;
   line-height: 28px;
-  font-family: 'SegoeUISemiLight';
-  font-weight: 300;
+  font-family: SegoeUISemiBold;
+  font-weight: 600;
+  margin-bottom: 15px;
 }
 .thirds .title.large {
   font-size: 22px;
@@ -1186,6 +1207,7 @@ a {
   color: #076dcc;
 }
 .cta {
+  margin-top: 30px;
   padding: 30px 0;
   grid-column: span 3;
   grid-template-columns: fit-content(300px);
