--- a/less/content.less
+++ b/less/content.less
@@ -387,6 +387,21 @@ img{
         }
     }
 }
+#section-3-2 {
+    .row.magazine {
+        grid-template-columns: repeat(6,1fr);
+    }
+    .mag {
+        h2 {
+            margin-bottom: 30px;
+        }
+        .thirds {
+            .title {
+                margin-bottom: 0px;
+            }
+        }
+    }
+}
 #section-3-3{
     .thirds{
         
