--- a/styles/main.css
+++ b/styles/main.css
@@ -339,6 +339,15 @@ img {
 #section-3-1 .thirds .content {
   padding-right: 30px;
 }
+#section-3-2 .row.magazine {
+  grid-template-columns: repeat(6, 1fr);
+}
+#section-3-2 .mag h2 {
+  margin-bottom: 30px;
+}
+#section-3-2 .mag .thirds .title {
+  margin-bottom: 0px;
+}
 #section-3-3 .thirds .title {
   font-size: 28px;
   font-family: 'SegoeUISemiBold';
@@ -1061,7 +1070,7 @@ h4 {
   color: #212121;
   font-family: 'SegoeUISemiBold';
   font-weight: 600;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
 }
 h5 {
   font-weight: 400;
