--- a/less/content.less
+++ b/less/content.less
@@ -610,7 +610,7 @@ img{
 .overlay{
     display: grid;
     grid-column: span 8;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(10, 1fr);
     .left, .right{
         background: rgba(0, 0, 0, .4);
         padding: 30px 20px;
@@ -637,17 +637,20 @@ img{
         margin-right: 30px;
         margin-top: 30px;
         width: 250px;
-        grid-column-end: 8;
+        grid-column-end: 10;
         grid-column-start: auto;
         grid-row-start: 1;
         z-index: 10;
         margin-bottom: 50px;
-
+        @media all and (min-width: 1750px){
+            grid-column-end: 9;
+            margin-left: 0;
+        }
     }
     
     .img-wrapper{
         grid-column-start: 1;
-        grid-column-end: 8;
+        grid-column-end: 10;
         grid-row-start: 1;
     }
 }
