laptop through section 5-8

--- a/less/content.less
+++ b/less/content.less
@@ -524,6 +524,19 @@ img{
     }
 }
 
+#section-5-4{
+    .thirds{
+        grid-template-rows: 60px 1fr;
+        .title{
+            align-self: flex-start;
+            }
+            p{
+                align-self: flex-start;
+            }
+    }
+    
+}
+
 #section-5-5{
     .thirds .title{
         font-family: 'SegoeUISemiLight';
