--- a/less/laptop.less
+++ b/less/laptop.less
@@ -7,6 +7,10 @@
 
 @media all and (max-width: 1084px){
   //typography
+  h3{
+   font-size: 3.5em; 
+  }
+
   h4{
     font-size: 2.25em;
     grid-column: span 9;
@@ -129,6 +133,42 @@
         grid-template-rows: minmax(50px, min-content) 1fr min-content;
       }
     }
+  }
+
+
+  #section-5-9, #section-5-12, #section-5-13{
+    .half p{
+      padding-right: 20px;
+    }
+  }
+
+  #section-5-11{
+    .fourths{
+      .title{
+        padding-bottom: 20px;
+      }
+    }
+  }
+
+
+  #section-6-1, #section-6-3{
+    .half{
+      grid-column: span 5;
+      .title{
+        padding-right: 0;
+        grid-column: span 2;
+        padding-bottom: 10px;
+      }
+    }
+    .row-twelve{
+      .thirds{
+        grid-column: span 8;
+      }
+    }
+  }
+
+  #section-6-3{
+    grid-row-gap: 10px;
   }
   .overlay{
     .img-wrapper{
