--- a/less/content.less
+++ b/less/content.less
@@ -340,6 +340,7 @@ img{
     .role{
         grid-column: span 2;
         margin-bottom: 20px;
+        padding-right: 20px;
     }
     .message{
         grid-column: span 2;
@@ -445,11 +446,14 @@ img{
             text-decoration: none;
         }
     }
-    .explanation .title{
-        font-size: 15px;
-        color: @text-gray;
-        font-weight: 600;
-        letter-spacing: .025em;
+    .explanation {
+        padding-right: 20px;
+        .title {
+            font-size: 15px;
+            color: @text-gray;
+            font-weight: 600;
+            letter-spacing: .025em;
+        }
     }
 
 }
