mobile nav phase 2

--- a/styles/main.css
+++ b/styles/main.css
@@ -1638,6 +1638,9 @@ a {
   }
 }
 @media all and (max-width: 767px) {
+  header {
+    z-index: 20;
+  }
   .navbar {
     display: block;
     position: fixed;
